adding summarize_by_id() function, documentation, and unit tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(round_numerics)
 export(simlong)
 export(simpson_coefficients)
 export(splice_color_order)
+export(summarize_by_id)
 export(tally_study)
 export(truncate_numeric)
 export(truncate_study)
